--- a/DetectChanges/Views/ApartmentCell.xib
+++ b/DetectChanges/Views/ApartmentCell.xib
@@ -32,19 +32,19 @@
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Time" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pRV-IB-t7s">
                                         <rect key="frame" x="0.0" y="0.0" width="202" height="21.666666666666668"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                        <color key="textColor" name="BrandDark"/>
+                                        <color key="textColor" name="brandDark"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Address" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="i4b-Ta-5oS">
                                         <rect key="frame" x="0.0" y="21.666666666666664" width="202" height="21.666666666666664"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                        <color key="textColor" name="BrandDark"/>
+                                        <color key="textColor" name="brandDark"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Rooms, m2, €" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zCX-9C-BgX">
                                         <rect key="frame" x="0.0" y="43.333333333333336" width="202" height="21.666666666666664"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                        <color key="textColor" name="BrandDark"/>
+                                        <color key="textColor" name="brandDark"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                 </subviews>
@@ -74,7 +74,7 @@
                                 </constraints>
                             </stackView>
                         </subviews>
-                        <color key="backgroundColor" name="BrandGray"/>
+                        <color key="backgroundColor" name="brandGray"/>
                         <constraints>
                             <constraint firstAttribute="bottom" secondItem="6cD-FD-btq" secondAttribute="bottom" id="0tc-kv-TVX"/>
                             <constraint firstItem="SRp-Nh-JQv" firstAttribute="top" secondItem="JbM-5X-eGx" secondAttribute="top" id="3cc-xQ-72U"/>
@@ -85,7 +85,7 @@
                         </constraints>
                     </stackView>
                 </subviews>
-                <color key="backgroundColor" name="BrandGray"/>
+                <color key="backgroundColor" name="brandGray"/>
                 <constraints>
                     <constraint firstItem="JbM-5X-eGx" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="5" id="6wD-rn-1n9"/>
                     <constraint firstAttribute="bottom" secondItem="JbM-5X-eGx" secondAttribute="bottom" constant="5" id="D3Q-QR-hnx"/>
@@ -114,10 +114,10 @@
         </designable>
     </designables>
     <resources>
-        <namedColor name="BrandDark">
+        <namedColor name="brandDark">
             <color red="0.3411764705882353" green="0.35294117647058826" blue="0.42745098039215684" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
-        <namedColor name="BrandGray">
+        <namedColor name="brandGray">
             <color red="0.8784313725490196" green="0.8901960784313725" blue="0.82352941176470584" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
     </resources>
