--- a/DetectChanges/Views/Base.lproj/Main.storyboard
+++ b/DetectChanges/Views/Base.lproj/Main.storyboard
@@ -19,14 +19,14 @@
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="baK-Zu-6OY">
                                 <rect key="frame" x="0.0" y="59" width="393" height="0.0"/>
-                                <color key="backgroundColor" name="BrandOlive"/>
+                                <color key="backgroundColor" name="brandOlive"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" name="BrandDark"/>
+                                <color key="textColor" name="brandDark"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="I40-be-S9K">
                                 <rect key="frame" x="0.0" y="67" width="393" height="639"/>
-                                <color key="backgroundColor" name="BrandGray"/>
+                                <color key="backgroundColor" name="brandGray"/>
                             </tableView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
@@ -53,13 +53,13 @@
         </scene>
     </scenes>
     <resources>
-        <namedColor name="BrandDark">
+        <namedColor name="brandDark">
             <color red="0.3411764705882353" green="0.35294117647058826" blue="0.42745098039215684" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
-        <namedColor name="BrandGray">
+        <namedColor name="brandGray">
             <color red="0.8784313725490196" green="0.8901960784313725" blue="0.82352941176470584" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
-        <namedColor name="BrandOlive">
+        <namedColor name="brandOlive">
             <color red="0.70588235294117652" green="0.77647058823529413" blue="0.25098039215686274" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <systemColor name="systemBackgroundColor">
